Fixed listing visibility for 'intern' listings

--- a/app/assets/stylesheets/partials/_flash.css.scss
+++ b/app/assets/stylesheets/partials/_flash.css.scss
@@ -30,6 +30,9 @@
 .ajax-update-notice {
   background: $lila;
   color: white;
+  a {
+    color: yellow;
+  }
 }
 
 .ajax-warning, .flash-warning{
